--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ matplotlib==3.1.3
 numpy==1.18.1
 opencv-python==4.2.0.32
 pandas==1.0.1
-Pillow==8.2.0
+pillow>=8.3.2
 pyparsing==2.4.6
 python-dateutil==2.8.1
 pytz==2019.3
